--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "MIT",
   "devDependencies": {
     "mocha": "^8.0.1",
-    "mysql2": "^2.1.0",
-    "mongodb": "^3.5.9"
+    "mysql2": "^2.1.0"
   }
 }
