--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   ## install mongodb
   - wget https://repo.mongodb.org/apt/ubuntu/dists/xenial/mongodb-org/4.2/multiverse/binary-amd64/mongodb-org-server_4.2.8_amd64.deb
   - sudo dpkg -i ./mongodb-org-server_4.2.8_amd64.deb
-  - sudo service mongodb start
+  - sudo systemctl restart mongodb
   - mongo --version
   - mongorestore dumps/northwind_mongodb/
   ## MySQL
